Rewrtie "nan" as empty sttring

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 522,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,8 @@
     "from datetime import datetime\n",
     "from datetime import date\n",
     "\n",
-    "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
-    "diseaseChosen = 'Brain'\n",
+    "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'\n",
+    "diseaseChosen = 'Sarcoma'\n",
     "## knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
     "# table Status is treated separately, first.\n",
     "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History']\n",
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 524,
    "metadata": {},
    "outputs": [
     {
@@ -540,10 +540,11 @@
      "text": [
       "\n",
       "STEP 1: Find patients' first diagnosis date.\n",
-      "../Caisis_NonPublicData/Brain_nov2021\n",
-      "CHECK NoDxDate? REPORT NoDxDate.txt has *6* diagnoses of Brain without diagnosis dates.\n",
-      "Resulting patient IDs = 2164\n",
-      "(2164, 2)\n",
+      "../Caisis_NonPublicData/Sarcoma_nov2021\n",
+      "CHECK NoDxDate? OK\n",
+      "TBD: delete existing NoDxDate.txt report.\n",
+      "Resulting patient IDs = 4302\n",
+      "(4302, 2)\n",
       "\n",
       "STEP 2: Load all CSV tables.\n",
       "Reading Clinical Stages.csv...\n",
@@ -570,13 +571,13 @@
       "['PatientId', 'EVENT_TYPE', 'START_DATE', 'STOP_DATE', 'KPS']\n",
       "---- end of column_names ---\n",
       "datafiles_fields[timeline-encounters]  is....\n",
-      "[<__main__.ImportField object at 0x0000020899F106D0>, <__main__.ImportField object at 0x0000020899F103A0>, <__main__.ImportField object at 0x0000020899F108B0>, <__main__.ImportField object at 0x0000020899F95670>, <__main__.ImportField object at 0x0000020899F959A0>]\n",
+      "[<__main__.ImportField object at 0x0000020899F106D0>, <__main__.ImportField object at 0x0000020899F103A0>, <__main__.ImportField object at 0x0000020899F108B0>, <__main__.ImportField object at 0x000002089E152970>, <__main__.ImportField object at 0x000002089E152310>]\n",
       "column_names....\n",
       "<class 'list'>\n",
       "['PatientId', 'EVENT_TYPE', 'START_DATE', 'STOP_DATE', 'RadTxType', 'RadTxTarget', 'RadTxTotalDose']\n",
       "---- end of column_names ---\n",
       "datafiles_fields[timeline-radiation]  is....\n",
-      "[<__main__.ImportField object at 0x0000020899F106D0>, <__main__.ImportField object at 0x0000020899F103A0>, <__main__.ImportField object at 0x0000020899F108B0>, <__main__.ImportField object at 0x0000020899F95310>, <__main__.ImportField object at 0x0000020899F95790>, <__main__.ImportField object at 0x0000020899F953A0>]\n"
+      "[<__main__.ImportField object at 0x0000020899F106D0>, <__main__.ImportField object at 0x0000020899F103A0>, <__main__.ImportField object at 0x0000020899F108B0>, <__main__.ImportField object at 0x000002089E1524F0>, <__main__.ImportField object at 0x000002089E152BB0>, <__main__.ImportField object at 0x000002089E152940>]\n"
      ]
     }
    ],
@@ -593,14 +594,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 525,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory already existed :  ../Caisis_NonPublicData/Brain_nov2021/01_with_headers/\n",
+      "Created Directory :  ../Caisis_NonPublicData/Sarcoma_nov2021/01_with_headers/\n",
       "end getcoltypes,\n",
       "['STRING', 'DATE']\n",
       "Attempt to write timeline-encounters.\n",
