CaisisImport now calls zero_dates

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,7 @@
     "# table Status is treated separately, first.\n",
     "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History']\n",
     "date_format = '%Y-%M-%d'  # '%d-%b-%y'   #'%b %d %Y %I:%M%p'\n",
+    "\n",
     "#days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the diagnosis date.\n",
     "missing_date = datetime(2222, 2,2)  # use instead of empty/None to indicate missing data\n",
     "\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "core_timeline_fields = [\n",
+    "    ImportField('EVENT_TYPE', final_name='EVENT_TYPE') , \n",
+    "    ImportField('START_DATE', final_name='START_DATE', type='DATE') , \n",
+    "    ImportField('STOP_DATE', final_name='STOP_DATE', type='DATE') , \n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,11 +206,12 @@
     "            print(\"nan text found\")\n",
     "            val = \"\"            \n",
     "    if ifield.type=='DATE':\n",
-    "        # print(str(ifield.type)+\", val...\"+str(val))\n",
+    "        # print(str(ifield.type)+\", val-type=\" + str(type(val)) + \" val=(\"+str(val)+\")\")\n",
     "        if isinstance(val, str):\n",
     "            val = datetime.strptime(val, date_format)\n",
     "        else:\n",
-    "            val=\"NOTSTR\" # TBD: error reporting\n",
+    "            val=\"\" # TBD: error reporting\n",
+    "            print(\"WARN: expected string for date, but isn't a string.\")\n",
     "    try:\n",
     "        return val\n",
     "    except:\n",
@@ -251,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +319,11 @@
     "\n",
     "            # print('pid='+pid+', etype='+etype+', start='+str(start_date)+',  stop='+str(stop_date)+'.')\n",
     "            \n",
-    "            new_row = [pid, etype, start_date, stop_date]\n",
+    "            new_row = [pid, \n",
+    "                process_val(etype, core_timeline_fields[0]), \n",
+    "                process_val(start_date, core_timeline_fields[1]), \n",
+    "                process_val(stop_date, core_timeline_fields[2]), \n",
+    "                ]\n",
     "            # now append all import fields\n",
     "            for ifield in import_fields:\n",
     "                if ifield.source_name in current_table.columns:\n",
@@ -341,15 +360,12 @@
     "        # if len(noval_list) > 0 :\n",
     "        #     percent_str = \"{0:.0%}\".format(len(noval_list) / new_values.shape[0])\n",
     "        #     print(\"- Field \" + tname+\".\"+current_lookup_field + \" had \" + str(len(noval_list)) + \" missing entries. (\"+percent_str+\" empty)\")\n",
-    "        #     #print(str( len(noval_list) / new_values.shape[0]))\n",
-    "\n",
-    "\n",
-    "\n"
+    "        #     #print(str( len(noval_list) / new_values.shape[0]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,20 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "core_timeline_fields = [\n",
-    "    ImportField('EVENT_TYPE', final_name='EVENT_TYPE') , \n",
-    "    ImportField('START_DATE', final_name='START_DATE', type='DATE') , \n",
-    "    ImportField('STOP_DATE', final_name='STOP_DATE', type='DATE') , \n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +472,7 @@
     "            if exc.errno != errno.EEXIST:\n",
     "                raise\n",
     "\n",
-    "    with open(full_filename, \"w\") as f:\n",
+    "    with open(full_filename, 'w', newline='\\r\\n') as f:\n",
     "        col_names_raw = list(df.columns.values)   # was data_clinical_patient.columns.values\n",
     "        col_names = [x.upper() for x in col_names_raw]\n",
     "        col_types = get_col_types(filename)\n",
@@ -492,7 +495,9 @@
     "                else:\n",
     "                    if 'time' in str(type(item)):   # datetime.datetime or pandas...timestamp.Timestamp # this does not work:  col_types[i]==\"DATE\":  # \n",
     "                        # print('DATE for col ' + str(i) +', '+str(col_names[i]))\n",
-    "                        cleaned_item = str(datetime.strftime(item, '%Y-%M-%d'))\n",
+    "                        cleaned_item = datetime.strftime(item, '%Y-%M-%d')\n",
+    "                if (str(item)==\"nan\"):\n",
+    "                    cleaned_item = \"\"\n",
     "                output_row.append(cleaned_item)\n",
     "                i=i+1\n",
     "\n",
@@ -502,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,56 +536,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "STEP 1: Find patients' first diagnosis date.\n",
-      "../Caisis_NonPublicData/Sarcoma_nov2021\n",
-      "CHECK NoDxDate? OK\n",
-      "TBD: delete existing NoDxDate.txt report.\n",
-      "Resulting patient IDs = 4302\n",
-      "(4302, 2)\n",
-      "\n",
-      "STEP 2: Load all CSV tables.\n",
-      "Reading Clinical Stages.csv...\n",
-      "Clinical Stages read.\n",
-      "Reading Demographics.csv...\n",
-      "Demographics read.\n",
-      "Reading Encounters.csv...\n",
-      "Encounters read.\n",
-      "Reading Medical Therapy.csv...\n",
-      "Medical Therapy read.\n",
-      "Reading Pathology.csv...\n",
-      "Pathology read.\n",
-      "Reading Procedures.csv...\n",
-      "Procedures read.\n",
-      "Reading Radiation.csv...\n",
-      "Radiation read.\n",
-      "Reading Social History.csv...\n",
-      "Social History read.\n",
-      "=====  MUST... import_fields_to_patient_table()\n",
-      "\n",
-      "STEP 4: Import to events tables.\n",
-      "column_names....\n",
-      "<class 'list'>\n",
-      "['PatientId', 'EVENT_TYPE', 'START_DATE', 'STOP_DATE', 'KPS']\n",
-      "---- end of column_names ---\n",
-      "datafiles_fields[timeline-encounters]  is....\n",
-      "[<__main__.ImportField object at 0x0000020899F106D0>, <__main__.ImportField object at 0x0000020899F103A0>, <__main__.ImportField object at 0x0000020899F108B0>, <__main__.ImportField object at 0x000002089E152970>, <__main__.ImportField object at 0x000002089E152310>]\n",
-      "column_names....\n",
-      "<class 'list'>\n",
-      "['PatientId', 'EVENT_TYPE', 'START_DATE', 'STOP_DATE', 'RadTxType', 'RadTxTarget', 'RadTxTotalDose']\n",
-      "---- end of column_names ---\n",
-      "datafiles_fields[timeline-radiation]  is....\n",
-      "[<__main__.ImportField object at 0x0000020899F106D0>, <__main__.ImportField object at 0x0000020899F103A0>, <__main__.ImportField object at 0x0000020899F108B0>, <__main__.ImportField object at 0x000002089E1524F0>, <__main__.ImportField object at 0x000002089E152BB0>, <__main__.ImportField object at 0x000002089E152940>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "find_patients_first_dx()\n",
     "print(patients_first_dx.shape)\n",
@@ -594,38 +552,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created Directory :  ../Caisis_NonPublicData/Sarcoma_nov2021/01_with_headers/\n",
-      "end getcoltypes,\n",
-      "['STRING', 'DATE']\n",
-      "Attempt to write timeline-encounters.\n",
-      "in getcoltypes for timeline-encounters,...\n",
-      "> STRING\n",
-      "> DATE\n",
-      "> DATE\n",
-      "> NUMBER\n",
-      "> STRING\n",
-      "end getcoltypes,\n",
-      "['STRING', 'STRING', 'DATE', 'DATE', 'NUMBER', 'STRING']\n",
-      "Attempt to write timeline-radiation.\n",
-      "in getcoltypes for timeline-radiation,...\n",
-      "> STRING\n",
-      "> DATE\n",
-      "> DATE\n",
-      "> STRING\n",
-      "> STRING\n",
-      "> STRING\n",
-      "end getcoltypes,\n",
-      "['STRING', 'STRING', 'DATE', 'DATE', 'STRING', 'STRING', 'STRING']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "write_files_as_cbioportal()"
    ]
@@ -636,33 +565,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(list(data_clinical_patient.columns.values))\n",
-    "print(data_clinical_patient['BirthDate'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from zero_dates import square_plus, zero_dates\n",
+    "from zero_dates import   zero_dates\n",
     "\n",
-    "square_plus(3)\n",
     "\n",
-    "zero_dates('../Caisis_NonPublicData/Prostate_TAN')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "data_clinical_patient = patients_first_dx.copy()\n",
-    "import_fields_to_patient_table()\n",
-    "print(data_clinical_patient)"
+    "# zero_dates('../Caisis_NonPublicData/Prostate_TAN'  )\n",
+    "zero_dates(dataset_folder+'/01_with_headers', patient_info_filename = \"data_clinical_patient.txt\", zero_day_column_name =  \"DIAGNOSISDATE\" )"
    ]
   }
  ],
