Zero-date files now get saved in foldername_zero_dates

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -8,24 +8,6 @@
    "source": [
     "# CaisisImport. A utility to prepare a Caisis-to-Excel export for import into Oncoscape (via cBioPortal format).\n",
     "\n",
-    "# Steps:\n",
-    "# . Limit by disease\n",
-    "# . ExportAsTSVs\n",
-    "# . ZeroDates\n",
-    "# . \n",
-    "\n",
-    "\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import errno\n",
-    "import sys\n",
-    "import math\n",
-    "import pipes\n",
-    "#import datetime\n",
-    "from typing import List\n",
-    "from datetime import datetime\n",
-    "from datetime import date\n",
-    "\n",
     "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'\n",
     "diseaseChosen = 'Sarcoma'\n",
     "## knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
@@ -34,15 +16,48 @@
     "date_format = '%Y-%M-%d'  # '%d-%b-%y'   #'%b %d %Y %I:%M%p'\n",
     "\n",
     "#days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the diagnosis date.\n",
-    "missing_date = datetime(2222, 2,2)  # use instead of empty/None to indicate missing data\n",
+    "missing_date_str = '2222-02-02'  # use instead of empty/None to indicate missing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "## -- internal --\n",
+    "# Steps:\n",
+    "# . Limit by disease\n",
+    "# . Read in CSVs\n",
+    "# . Export as TSVs\n",
+    "# . ZeroDates\n",
+    "# . \n",
+    "\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import errno\n",
+    "import sys\n",
+    "import math\n",
+    "import pipes\n",
+    "from typing import List\n",
+    "from datetime import datetime\n",
+    "from datetime import date\n",
+    "\n",
+    "from zero_dates import   zero_dates\n",
+    "missing_date = datetime.strptime(missing_date_str, date_format)  #datetime(2222, 2,2)  # TBD: \n",
+    "\n",
+    "## -- internal initialization --\n",
     "patients_first_dx = pd.DataFrame()   # just PatientId and DiagnosisDate\n",
     "data_clinical_patient = pd.DataFrame() # Will become the data_clinical_patient table.\n",
     "loaded_tables_dict = {}\n",
     "data_clinical_patient = None\n",
     "data_clinical_timeline_dfs = {}   # dictionary of dataframes, keyed off of \"timeline-foo\" names.\n",
-    "datafiles_fields = {}"
+    "datafiles_fields = {}\n",
+    "current_lookup_field = None  # placeholder.\n",
+    "noval_list = []   # List of patient IDs with no associated value in one or more of the import_fields. Use this for reporting. \n",
+    "\n",
+    "foldername_with_headers = '01_with_headers'\n",
+    "foldername_zero_dates = '02_zero_dates'"
    ]
   },
   {
@@ -193,9 +208,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "current_lookup_field = None  # placeholder.\n",
-    "noval_list = []   # List of patient IDs with no associated value in one or more of the import_fields. Use this for reporting. \n",
-    "\n",
     "def process_val(val, ifield:ImportField):\n",
     "    if ifield.type=='NUMBER':\n",
     "        val = val # convert to number\n",
@@ -464,7 +476,7 @@
    "source": [
     "def write_file_as_cbioportal(df:pd.DataFrame, filename):\n",
     "    output_filename = 'data_clinical_'+filename+'.txt'\n",
-    "    full_filename = dataset_folder + \"/01_with_headers/\" + output_filename\n",
+    "    full_filename = dataset_folder + \"/\"+foldername_with_headers+\"/\" + output_filename\n",
     "    if not os.path.exists(os.path.dirname(full_filename)):\n",
     "        try:\n",
     "            os.makedirs(os.path.dirname(full_filename))\n",
@@ -511,9 +523,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_files_as_cbioportal():\n",
-    "    # clear out the folder, if it has files\n",
-    "    dir = dataset_folder + \"/01_with_headers/\" \n",
+    "def create_and_empty_folder(dir):\n",
     "    if not os.path.exists(dir):\n",
     "        os.makedirs(dir)\n",
     "        print(\"Created Directory : \", dir)\n",
@@ -522,8 +532,22 @@
     "        import shutil\n",
     "        for root, dirs, files in os.walk(dir):\n",
     "            for f in files:\n",
-    "                os.unlink(os.path.join(root, f))\n",
+    "                os.unlink(os.path.join(root, f))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_files_as_cbioportal():\n",
+    "    # clear out the folder, if it has files\n",
+    "    dir = dataset_folder + \"/\"+foldername_with_headers+\"/\" \n",
+    "    create_and_empty_folder(dir)\n",
     "\n",
+    "    print('going to write patient')\n",
+    "    print(data_clinical_patient)\n",
     "\n",
     "    # loop through all table files\n",
     "    filename = 'patient'\n",
@@ -565,11 +589,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from zero_dates import   zero_dates\n",
-    "\n",
-    "\n",
-    "# zero_dates('../Caisis_NonPublicData/Prostate_TAN'  )\n",
-    "zero_dates(dataset_folder+'/01_with_headers', patient_info_filename = \"data_clinical_patient.txt\", zero_day_column_name =  \"DIAGNOSISDATE\" )"
+    "dir = dataset_folder + \"/\"+foldername_zero_dates+\"/\" \n",
+    "create_and_empty_folder(dir)\n",
+    "zero_dates(dataset_folder+'/'+foldername_with_headers, patient_info_filename = \"data_clinical_patient.txt\", zero_day_column_name =  \"DIAGNOSISDATE\", output_folder=dir )"
    ]
   }
  ],
