Restored call to process patient fields

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -10,6 +10,11 @@
     "\n",
     "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'\n",
     "diseaseChosen = 'Sarcoma'\n",
+    "\n",
+    "study_identifier = 'placeholder'\n",
+    "type_of_cancer = \"misc\"  # Use cbioportal term\n",
+    "study_description = study_identifier + ' study'\n",
+    "\n",
     "## knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
     "# table Status is treated separately, first.\n",
     "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History']\n",
@@ -177,6 +182,15 @@
     "    \n",
     "    save_file_and_folder(dataset_folder+'/reports/PatientsFirstDx.txt', report_body)\n",
     "    #patients_first_dx\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patients_first_dx"
    ]
   },
   {
@@ -486,6 +500,10 @@
     "\n",
     "    with open(full_filename, 'w', newline='\\r\\n') as f:\n",
     "        col_names_raw = list(df.columns.values)   # was data_clinical_patient.columns.values\n",
+    "        col_names_raw[0] = \"PATIENT_ID\" # Hack to insert underscore\n",
+    "        print('col_names_raw...')\n",
+    "        print(col_names_raw)\n",
+    "\n",
     "        col_names = [x.upper() for x in col_names_raw]\n",
     "        col_types = get_col_types(filename)\n",
     "        \n",
@@ -570,7 +588,7 @@
     "datafiles_fields = {\n",
     "    'patient': []   #not including PATIENT_ID\n",
     "}\n",
-    "print(\"=====  MUST... import_fields_to_patient_table()\")\n",
+    "import_fields_to_patient_table()\n",
     "import_fields_to_event_table()\n"
    ]
   },
@@ -589,9 +607,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def write_meta_files(dir):\n",
+    "    # Assumes dir already created, with create_and_empty_folder().\n",
+    "\n",
+    "    full_filename = dir+\"/\" + \"meta_study.txt\"\n",
+    "    with open(full_filename, 'w', newline='\\r\\n') as f:\n",
+    "        f.write(\"type_of_cancer: \"+ type_of_cancer +\"\\n\") \n",
+    "        f.write(\"cancer_study_identifier: \"+ study_identifier +\"\\n\" ) \n",
+    "        f.write(\"name: \"+ study_identifier +\"\\n\") \n",
+    "        f.write(\"short_name: \"+ study_identifier +\"\\n\") \n",
+    "        f.write(\"description: \"+ study_description +\"\\n\") \n",
+    "        f.write(\"add_global_case_list: true\" +\"\\n\") \n",
+    "\n",
+    "    full_filename = dir+\"/\" + \"meta_clinical_patient.txt\"\n",
+    "    with open(full_filename, 'w', newline='\\r\\n') as f:\n",
+    "        f.write(\"cancer_study_identifier: \"+ study_identifier +\"\\n\" ) \n",
+    "        f.write(\"genetic_alteration_type: CLINICAL\\n\") \n",
+    "        f.write(\"datatype: PATIENT_ATTRIBUTES\\n\") \n",
+    "        f.write(\"data_filename: data_clinical_patient.txt\" +\"\\n\") \n",
+    "\n",
+    "    # ==== START SAMPLE FILE =====\n",
+    "    # Oncoscape expects a sample/specimen file. Currently we don't support importing them, \n",
+    "    # so for now make a dummy file with a one-to-one mapping of patientid with \"sample-<patientid>\".\n",
+    "    full_filename = dir+\"/\" + \"meta_clinical_specimen_placeholder.txt\"\n",
+    "    with open(full_filename, 'w', newline='\\r\\n') as f:\n",
+    "        f.write(\"cancer_study_identifier: \"+ study_identifier +\"\\n\" ) \n",
+    "        f.write(\"genetic_alteration_type: CLINICAL\\n\") \n",
+    "        f.write(\"datatype: SAMPLE_ATTRIBUTES\\n\") \n",
+    "        f.write(\"data_filename: data_clinical_specimen_placeholder.txt\" +\"\\n\") \n",
+    "\n",
+    "    full_filename = dir+\"/\" + \"data_clinical_specimen_placeholder.txt\"\n",
+    "    with open(full_filename, 'w', newline='\\r\\n') as f:\n",
+    "        f.write(\"#Unique_patient_identifier\tSPECIMEN_ID\\n\")\n",
+    "        f.write(\"#STRING\tSTRING\\n\")\n",
+    "        f.write(\"#1\t1\\n\")\n",
+    "        f.write(\"PATIENT_ID\tSPECIMEN_ID\\n\")\n",
+    "        for row in data_clinical_patient.iterrows():\n",
+    "            f.write(row[1]['PatientId'] +\"\\tsample-\" + row[1]['PatientId']+\"\\n\")\n",
+    "\n",
+    "    # ==== END SAMPLE FILE =====\n",
+    "\n",
+    "    for event_table_name in data_clinical_timeline_dfs.keys():\n",
+    "        full_filename = dir+\"/\" + \"meta_clinical_\"+event_table_name+\".txt\"\n",
+    "        with open(full_filename, 'w', newline='\\r\\n') as f:\n",
+    "            f.write(\"cancer_study_identifier: \"+ study_identifier +\"\\n\" ) \n",
+    "            f.write(\"genetic_alteration_type: CLINICAL\\n\") \n",
+    "            f.write(\"datatype: TIMELINE\\n\") \n",
+    "            f.write(\"data_filename: data_clinical_\"+ event_table_name+\".txt\" +\"\\n\") \n",
+    "            # f.write('oncoscape_bar_override: {\"version\": \"1.0\" }' +\"\\n\") \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dir = dataset_folder + \"/\"+foldername_zero_dates+\"/\" \n",
     "create_and_empty_folder(dir)\n",
-    "zero_dates(dataset_folder+'/'+foldername_with_headers, patient_info_filename = \"data_clinical_patient.txt\", zero_day_column_name =  \"DIAGNOSISDATE\", output_folder=dir )"
+    "zero_dates(dataset_folder+'/'+foldername_with_headers, patient_info_filename = \"data_clinical_patient.txt\", zero_day_column_name =  \"DIAGNOSISDATE\", output_folder=dir )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for row in data_clinical_patient.head(3).iterrows():\n",
+    "#      print(row[1] ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_meta_files(dir)"
    ]
   }
  ],
