Reduce debugging outupt

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "# CaisisImport. A utility to prepare a Caisis-to-Excel export for import into Oncoscape (via cBioPortal format).\n",
     "\n",
-    "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'\n",
-    "diseaseChosen = 'Sarcoma'\n",
+    "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
+    "diseaseChosen = 'Brain'\n",
     "\n",
     "study_identifier = 'placeholder'\n",
     "type_of_cancer = \"misc\"  # Use cbioportal term\n",
@@ -564,13 +564,11 @@
     "    dir = dataset_folder + \"/\"+foldername_with_headers+\"/\" \n",
     "    create_and_empty_folder(dir)\n",
     "\n",
-    "    print('going to write patient')\n",
-    "    print(data_clinical_patient)\n",
+    "    print('Write patient meta file...')\n",
     "\n",
-    "    # loop through all table files\n",
     "    filename = 'patient'\n",
     "    write_file_as_cbioportal(data_clinical_patient, filename)\n",
-    "\n",
+    "    # loop through all table files\n",
     "    for df_key in data_clinical_timeline_dfs.keys():\n",
     "        print('Attempt to write '+df_key+'.')\n",
     "        write_file_as_cbioportal( data_clinical_timeline_dfs[df_key], df_key)\n"
