Subtype properly parses.

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -300,7 +300,10 @@
     "# event_table_name: name of table as it will appear in \"data_clinical_<timeline-foo>.txt\" filename. For events, should be \"timeline-foo\".\n",
     "# tname: Name of the dataframe table we have loaded from CSV, which contains these events to import.\n",
     "# import_fields: list of ImportFields OR str. str for case of EVENT_TYPE, which may not exist as column in an event CSV.\n",
-    "def import_to_event_table(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", start_date_col_name=None, stop_date_col_name=None): \n",
+    "\n",
+    "# event_Type is the name of the subtype column (e.g., RADIATION)\n",
+    "# subtype_source is the CSV column with the  source info for the subtype (e.g., RADTXTYPE)\n",
+    "def import_to_event_table(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", start_date_col_name=None, stop_date_col_name=None, subtype_source=None): \n",
     "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list\n",
     "    if (tname in loaded_tables_dict) == False:\n",
     "        print(\"WARN -- Could not process table \"+tname)\n",
@@ -322,6 +325,8 @@
     "        for ifield in import_fields:\n",
     "            if ifield.source_name in current_table.columns:\n",
     "                column_names.append(ifield.final_name)\n",
+    "        if subtype_source is not None:\n",
+    "            column_names.append(event_type)  # e.g., \"RADIATION\"\n",
     "\n",
     "        # Loop through rows in current_table.\n",
     "        # Pull out each field from import_fields, and add event type, and start and stop dates.\n",
@@ -367,6 +372,21 @@
     "                        pass\n",
     "\n",
     "                    new_row.append(val)\n",
+    "            \n",
+    "            if subtype_source is not None:\n",
+    "                # print('wwww subtype_source is...')\n",
+    "                # print(subtype_source)\n",
+    "                # print(str(row))\n",
+    "                # print('val...')\n",
+    "                val = str(row[subtype_source])\n",
+    "                if val == \"-1234\":\n",
+    "                    print(\"=====1234====\")\n",
+    "\n",
+    "                if (val.strip() == \"\") or (val.lower()==\"nan\"):\n",
+    "                    val = \"MISSING\" # TBD: add reporting of error.\n",
+    "                    print(\"WARNING: missing subtype value.\")\n",
+    "                new_row.append(val)  #row[subtype_source])\n",
+    "\n",
     "            # print(new_row)\n",
     "            rows_to_save.append(new_row)\n",
     "\n",
@@ -387,6 +407,16 @@
     "        #     percent_str = \"{0:.0%}\".format(len(noval_list) / new_values.shape[0])\n",
     "        #     print(\"- Field \" + tname+\".\"+current_lookup_field + \" had \" + str(len(noval_list)) + \" missing entries. (\"+percent_str+\" empty)\")\n",
     "        #     #print(str( len(noval_list) / new_values.shape[0]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gg=data_clinical_timeline_dfs['timeline-radiation']\n",
+    "# gg.loc[gg['PatientId'] == '72613']"
    ]
   },
   {
@@ -433,6 +463,7 @@
     "    datafiles_fields['timeline-encounters'] = core_timeline_fields.copy()\n",
     "    datafiles_fields['timeline-encounters'].extend(import_fields)\n",
     "\n",
+    "\n",
     "    print('datafiles_fields[timeline-encounters]  is....')\n",
     "    print(datafiles_fields['timeline-encounters'] )\n",
     "\n",
@@ -441,9 +472,11 @@
     "        ImportField('RadTxTarget', final_name='RadTxTarget' ) ,   \n",
     "        ImportField('RadTxTotalDose', final_name='RadTxTotalDose' ) ,   \n",
     "    ]\n",
-    "    import_to_event_table('timeline-radiation', 'Radiation', import_fields, event_type='RADIATION', start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate' )\n",
+    "    import_to_event_table('timeline-radiation', 'Radiation', import_fields, event_type='RADIATION', start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate', subtype_source=\"RadTxType\" )\n",
     "    datafiles_fields['timeline-radiation'] = core_timeline_fields.copy()\n",
     "    datafiles_fields['timeline-radiation'].extend(import_fields)\n",
+    "    datafiles_fields['timeline-radiation'].extend( [ ImportField('RADIATION', final_name='RADIATION') ])\n",
+    "    \n",
     "\n",
     "    print('datafiles_fields[timeline-radiation]  is....')\n",
     "    print(datafiles_fields['timeline-radiation'] )\n"
@@ -520,6 +553,7 @@
     "\n",
     "            for item in row_as_list:\n",
     "                cleaned_item = str(item)\n",
+    "                # print('--> '+cleaned_item)\n",
     "                if item == None:\n",
     "                    cleaned_item = \"\"\n",
     "                else:\n",
