Basics of common MedicalTherapy table.

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -20,7 +20,7 @@
     "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History']\n",
     "date_format = '%Y-%M-%d'  # '%d-%b-%y'   #'%b %d %Y %I:%M%p'\n",
     "\n",
-    "#days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the diagnosis date.\n",
+    "#days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the zero date. Default is 30.\n",
     "missing_date_str = '2222-02-02'  # use instead of empty/None to indicate missing data"
    ]
   },
@@ -477,9 +477,17 @@
     "    datafiles_fields['timeline-radiation'].extend(import_fields)\n",
     "    datafiles_fields['timeline-radiation'].extend( [ ImportField('RADIATION', final_name='RADIATION') ])\n",
     "    \n",
-    "\n",
-    "    print('datafiles_fields[timeline-radiation]  is....')\n",
-    "    print(datafiles_fields['timeline-radiation'] )\n"
+    "    import_fields = [\n",
+    "        ImportField('RadTxType', final_name='RadTxType' ) ,   \n",
+    "        ImportField('RadTxTarget', final_name='RadTxTarget' ) ,   \n",
+    "        ImportField('RadTxTotalDose', final_name='RadTxTotalDose' ) ,   \n",
+    "    ]\n",
+    "    import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
+    "    datafiles_fields['timeline-medicaltherapy'] = core_timeline_fields.copy()\n",
+    "    datafiles_fields['timeline-medicaltherapy'].extend(import_fields)\n",
+    "    datafiles_fields['timeline-medicaltherapy'].extend( [ ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') ])\n",
+    "    \n",
+    "\n"
    ]
   },
   {
@@ -713,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
